<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/text_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/text_greeting" />


        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:hint="@string/name"
            android:inputType="text"
            android:textSize="17sp"
            android:textStyle="normal"
            />

        <EditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:hint="@string/surname"
            android:inputType="text"
            android:textSize="17sp"
            android:textStyle="normal"
            />

        <EditText
            android:id="@+id/othcestvo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:hint="@string/otchestvo"
            android:inputType="text"
            android:textSize="17sp"
            android:textStyle="normal"
            />

        <TextView
            android:id="@+id/text_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/choose_gender"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />

        <RadioGroup
            android:id="@+id/myRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_gender" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/female_gender" />
        </RadioGroup>

        <Spinner
            android:id="@+id/combobox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="17sp"
            android:textStyle="normal"
            android:entries="@array/course_list" />
        />
    </LinearLayout>
</ScrollView>